[package]
name = "ase2ttf_core"
version = "0.1.0"
edition = "2024"
description = "ase2ttf core crate"
authors = ["nuskey"]
license = "Apache-2.0"
repository = "https://github.com/nuskey8/ase2ttf"
include = ["/Cargo.toml", "../LICENSE", "../README.md", "/src/**"]

[dependencies]
asefile = "0.3.8"
chrono = "0.4.41"
kurbo = "0.11.2"
wasm-bindgen = "0.2.100"
write-fonts = "0.39.0"

[lib]
crate-type = ["cdylib", "rlib"]
